; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_malloc.c_faultsimRealloc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_malloc.c_faultsimRealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i8* (i8*, i32)* }

@memfault = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @faultsimRealloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @faultsimRealloc(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i8* null, i8** %5, align 8
  %6 = call i32 (...) @faultsimStep()
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %13, label %8

8:                                                ; preds = %2
  %9 = load i8* (i8*, i32)*, i8* (i8*, i32)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @memfault, i32 0, i32 0, i32 0), align 8
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i8* %9(i8* %10, i32 %11)
  store i8* %12, i8** %5, align 8
  br label %13

13:                                               ; preds = %8, %2
  %14 = load i8*, i8** %5, align 8
  ret i8* %14
}

declare dso_local i32 @faultsimStep(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
